# wakelockd

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac
files/sysbus/: org.webosports.wakelockd.json.pub.in  org.webosports.wakelockd.service.pub.in
src/: main.c  power_key_resume_handler.c  resume_handler.h  rtc_resume_handler.c  usb_resume_handler.c
